Niliana: add more containers

--- a/mod/area/area005.git.yml
+++ b/mod/area/area005.git.yml
@@ -26,7 +26,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
@@ -1209,7 +1209,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1671}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1272,7 +1272,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1670}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1657,8 +1657,8 @@ Placeable List:
     CurrentHP: {type: :short, value: 10}
     Description: 
       type: :cexolocstr
-      value: {}
-
+      value: 
+        0: ""
     DisarmDC: {type: :byte, value: 0}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 5}
@@ -1687,7 +1687,7 @@ Placeable List:
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: univstore2_start}
+    OnUsed: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 0}
     Plot: {type: :byte, value: 1}
@@ -1703,15 +1703,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
-    VarTable:
-      type: :list
-      value:
-      - !nwn-lib.elv.es,2008-12/struct
-        __struct_id: 0
-        Name: {type: :cexostr, value: store_tag}
-        Type: {type: :dword, value: 3}
-        Value: {type: :cexostr, value: "85902"}
+    Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 5.273}
     Y: {type: :float, value: 2.4873}
@@ -1964,10 +1956,10 @@ Placeable List:
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 1}
-    VarTable:
+    VarTable: 
       type: :list
-      value:
-      - !nwn-lib.elv.es,2008-12/struct
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Name: {type: :cexostr, value: store_tag}
         Type: {type: :dword, value: 3}
@@ -2109,69 +2101,6 @@ Placeable List:
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 15.3353}
     Y: {type: :float, value: 5.1039}
-    Z: {type: :float, value: 0.2}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 8}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.1963}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 10}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 5}
-    HP: {type: :short, value: 10}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      value: 
-        0: Lagertruhe
-    Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: omw_ppis_start}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 1}
-    PortraitId: {type: :word, value: 366}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: ppis_start_store}
-    TemplateResRef: {type: :resref, value: ppis_start_store}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 12.8545}
-    Y: {type: :float, value: 17.9304}
     Z: {type: :float, value: 0.2}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -5580,7 +5509,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1319}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7858,7 +7787,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 284}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7923,7 +7852,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8238,7 +8167,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1766}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8818,69 +8747,6 @@ Placeable List:
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 7.85}
     Y: {type: :float, value: 18.02}
-    Z: {type: :float, value: 0.2}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 10}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 1.9635}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 10}
-    Description: 
-      type: :cexolocstr
-      value: 
-        0: Diese Kleine Kiste scheint schon ziemlich alt zu sein, doch ist sie auch reichlich verziert mit Schnitzerreien und Runen.
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 5}
-    HP: {type: :short, value: 10}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 1}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      value: 
-        0: Geheime Kiste aus Sigil
-    Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: us_trashbox}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 368}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: GeheimeKisteausSigil}
-    TemplateResRef: {type: :resref, value: geheimekisteauss}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 3.5198}
-    Y: {type: :float, value: 3.4449}
     Z: {type: :float, value: 0.2}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -11466,6 +11332,77 @@ Placeable List:
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 18.2376}
     Y: {type: :float, value: 7.3881}
+    Z: {type: :float, value: 0.2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 9
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 1702}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -0.1963}
+    BodyBag: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 10}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 5}
+    HP: {type: :short, value: 10}
+    Hardness: {type: :byte, value: 5}
+    HasInventory: {type: :byte, value: 0}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LocName: 
+      type: :cexolocstr
+      value: 
+        0: Kleiderschrank
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: ""}
+    OnClosed: {type: :resref, value: ""}
+    OnDamaged: {type: :resref, value: ""}
+    OnDeath: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnInvDisturbed: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: ""}
+    OnMeleeAttacked: {type: :resref, value: ""}
+    OnOpen: {type: :resref, value: ""}
+    OnSpellCastAt: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    OnUnlock: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: univstore2_start}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 0}
+    Ref: {type: :byte, value: 0}
+    Static: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: pvq_1702}
+    TemplateResRef: {type: :resref, value: pvq_1702}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: store_tag}
+        Type: {type: :dword, value: 3}
+        Value: {type: :cexostr, value: "108"}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 12.8417}
+    Y: {type: :float, value: 18.2005}
     Z: {type: :float, value: 0.2}
 SoundList: 
   type: :list
