--- a/mod/area/nilithshia_ug.git.yml
+++ b/mod/area/nilithshia_ug.git.yml
@@ -2631,7 +2631,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1701}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2652,7 +2652,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: Chest_of_Drawers1
+        0: Schrank
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -2668,10 +2668,10 @@ Placeable List:
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: univstore2_start}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
     Static: {type: :byte, value: 0}
@@ -2684,7 +2684,15 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: store_tag}
+        Type: {type: :dword, value: 3}
+        Value: {type: :cexostr, value: "110"}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 8.6126}
     Y: {type: :float, value: 3.4408}
@@ -2715,7 +2723,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: Chest_of_Drawers2
+        0: Schrank
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -2731,10 +2739,10 @@ Placeable List:
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: univstore2_start}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
     Static: {type: :byte, value: 0}
@@ -2747,7 +2755,15 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: store_tag}
+        Type: {type: :dword, value: 3}
+        Value: {type: :cexostr, value: "109"}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 4.0424}
     Y: {type: :float, value: 15.8204}
@@ -3828,7 +3844,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1957}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3849,7 +3865,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: CODI_Desk
+        0: Schreibtisch
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -3865,10 +3881,10 @@ Placeable List:
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: univstore_2start}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
     Static: {type: :byte, value: 0}
@@ -3881,7 +3897,15 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: store_tag}
+        Type: {type: :dword, value: 3}
+        Value: {type: :cexostr, value: "111"}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 11.8735}
     Y: {type: :float, value: 3.6084}
