--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -66,6 +66,7 @@ Mod_HakList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_cep2c}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: completerc}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: stained_glass}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: tapestries}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: q_placeables}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: athscoin}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: wizard_hats}}
