--- a/hak/client_merge/Makefile
+++ b/hak/client_merge/Makefile
@@ -5,27 +5,4 @@ TARGET=silm_merge.hak
 
 VALIDEXT=*.dds *.mdl *.plt *.ssf *.tga *.wav
 
-resources := $(wildcard $(VALIDEXT))
-
-all: $(TARGET)
-
-path:
-ifeq  "$(NWNHOME)" ""
-	@echo "env var NWNHOME not set."
-	exit 1
-endif
-
-clean-backup:
-	-rm *.*~ *.out *.hak
-
-clean: clean-backup
-	-rm *.hak
-	
-$(TARGET): $(resources)
-	erfpack.pl -H -o $@ $(VALIDEXT)
-
-install: path $(TARGET)
-	@cp -v $(TARGET) $(NWNHOME)/hak/
-
-publish: $(TARGET)
-	rsync -Pzva --chmod=go+r $(TARGET) silbermarken@miyeritar:rsync/nwn/hak/
+include ../Makefile.hak
